--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <title>Chad Harper Resume</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
 
+</body>
+</html>
