--- a/index.html
+++ b/index.html
@@ -10,8 +10,14 @@
 <body>
   <div>
     <h1>Chad Harper</h1>
-  <p>Challenge seeking, ambitious individual with a knack for problem solving and organization</p>
-  </div>
+  <p class="intro">Challenge seeking, ambitious individual with a knack for problem solving and organization</p>
+      <div class="grid-container">
+    <div class="item1">
+          Phone: (913) 961-8439
+        </div>
+        <div class="item2">Email: ChadHarper811@gmail.com</div>  
+      </div>
+    </div>
   
   <div class="All Sections">
     <div class="Section Qual">
